# Increment-Tracker

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: SPEC.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/app/: App.tsx  Layout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/: Badge.tsx  ConfirmDialog.tsx  DataTable.tsx  EmptyState.tsx  FilterChips.tsx  IssueTable.tsx  KpiCard.tsx  ProgressBar.tsx  StatusChip.tsx  components.test.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: BurnupPoint.ts  ConnectionTestResult.ts  DashboardData.ts  Epic.ts  EpicDetail.ts  FieldMapping.ts  GanttRow.ts  Increment.ts  IncrementInput.ts  Insight.ts  InsightSeverity.ts  IssueSprint.ts  Kpis.ts  ProgressBreakdown.ts  SaveConnectionInput.ts  SettingsView.ts  SpilledIssueRow.ts  SpilloverReport.ts  Sprint.ts  SprintDetail.ts  SprintState.ts  StatusCategory.ts  SyncSummary.ts  TestConnectionInput.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: connection.rs  mod.rs  queries.rs  settings.rs  sync.rs  types.rs
src-tauri/src/domain/: insights.rs  mapper.rs  mod.rs  model.rs  progress.rs  spillover.rs  sprint_naming.rs  timeline.rs  view.rs
src-tauri/src/jira/: auth.rs  client.rs  dto.rs  fields.rs  mod.rs  search.rs
src-tauri/src/store/: cache.rs  db.rs  mod.rs  secrets.rs
(+19 files in other folders)
