[package]
name = "increment-tracker"
version = "0.1.0"
description = "Desktop app for tracking Jira epic and sprint progress across increments"
authors = ["Geeth Sandaru Madhushan"]
edition = "2021"

[lib]
name = "increment_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
base64 = "0.22"
regex = "1"
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl"] }

[profile.release]
strip = true
lto = true
